# DailyEnglish

./: .dockerignore  .env.example  .gitattributes  .gitignore  .python-version  Dockerfile  README.md  RELEASE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  exceptions.py  healthcheck.py  logging.py  main.py
app/bot/: __init__.py  formatters.py
app/data/: __init__.py  sentences.jsonl  words.jsonl
app/db/: __init__.py  models.py  session.py
app/domain/: __init__.py  enums.py  scheduling.py  schemas.py  time.py
app/providers/: __init__.py  base.py  database.py  dictionary.py  fallback.py  llm.py  validators.py
app/services/: __init__.py  admin_update_service.py  content_service.py  delivery_service.py  excel_export.py  favorite_service.py  invite_service.py  review_service.py  user_service.py
app/workers/: __init__.py  content_refill.py  daily_push.py  main.py
docs/: architecture.md  commands.md  database.md  deployment.md  operations.md  security.md
migrations/: README.md  env.py
migrations/versions/: 20260710_0001_initial_schema.py  20260711_0002_user_preferred_difficulty.py  20260711_0003_multi_difficulty_preferences.py  20260711_0004_app_state.py  20260711_0005_content_difficulty_index.py  20260711_0006_favorite_review_state.py
scripts/: backup.sh  build_sentence_library.py  build_word_library.py  deploy.sh  fill_word_examples.py  install.sh  restore.sh  update_word_library.sh
tests/: conftest.py
tests/integration/: test_admin_flow.py  test_daily_push.py  test_registration_flow.py
(+46 files in other folders)
