[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dailyenglish-bot"
version = "0.1.0"
description = "Invite-only Telegram bot for daily English learning content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20,<4",
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.9,<3",
    "SQLAlchemy[asyncio]>=2.0.41,<3",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.21,<1",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.12,<1",
]

[project.scripts]
dailyenglish-bot = "app.main:run"
dailyenglish-worker = "app.workers.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["UP042"]
